--- a/graphic-design.html
+++ b/graphic-design.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title> graphic design </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="nav-bar">
+<h1 style="color: #000000;"> Sonia Goveas </h1>
+
+<div class="nav-bar" style="background-color: #000000;">
   <a href="index.html">Home</a>
   <a href="resume.html">Resume</a>
 
@@ -21,9 +23,5 @@
     </div>
   <a href="UXdesign.html">Product Design</a>
 </div>
-
-    <h2>Data-driven.</h2>
-    <h2>Design-focused.</h2>
-    
 </body>
 </html>
