--- a/graphic-design.html
+++ b/graphic-design.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> graphic design </title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Graphic Design | Sonia Goveas</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-<h1 style="color: #000000;"> Sonia Goveas </h1>
+  <h1 style="color: #000000;">Sonia Goveas</h1>
 
-<div class="nav-bar" style="background-color: #000000;">
-  <a href="index.html">Home</a>
-  <a href="resume.html">Resume</a>
+  <div class="nav-bar" style="background-color: #000000;">
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>x
 
-  <div class="dropdown">
-    <a href="graphic-design.html" class="dropbtn">Graphic Design</a>
-    <div class="dropdown-content">
-      <a href="architecture-abstracted.html"> architecture abstracted </a>
-      <a href="sf-icons.html"> san francisco icons</a>
-      <a href="patterns-simplified.html"> patterns simplified </a>
+    <div class="dropdown" >
+      <a href="graphic-design.html" class="dropbtn" >Graphic Design</a>
+      <div class="dropdown-content">
+        <a href="architecture-abstracted.html" style="color: #000000;"> architecture abstracted </a>
+        <a href="sf-icons.html" style="color: #000000;"> san francisco icons</a>
+        <a href="patterns-simplified.html" style="color: #000000;"> patterns simplified </a>
     </div>
-    </div>
-  <a href="UXdesign.html">Product Design</a>
+  </div>
+  <a href="UXdesign.html">Web Design</a>
 </div>
+
+  <div class="projects">
+    <div class="project-card">
+      <img src="images/san-francisco-icons/3-icons.jpg" alt="San Francisco Icons">
+      <div class="project-info">
+        <h2 style="color: #000000;">San Francisco Icons</h2>
+        <p>Three icons representing Japantown, Chinatown, and the Richmond District — unified through color and mood.</p>
+        <a href="sf-icons.html" style="color: #000000;">View Project →</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <img src="images/campus-architecture/1759179652525-a1acb825-b63d-404c-b9b7-19a6cdad8881_1.jpg" alt="Architecture Abstracted">
+      <div class="project-info">
+        <h2 style="color: #000000;">Architecture Abstracted</h2>
+        <p>A series of Illustrator works capturing quiet campus architecture with a minimal palette inspired by Victorian homes.</p>
+        <a href="architecture-abstracted.html" style="color: #000000;">View Project →</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <img src="images/patterns-simplified/patterned.png" alt="Patterns Simplified">
+      <div class="project-info">
+        <h2 style="color: #000000;">Patterns Simplified</h2>
+        <p>Geometric reinterpretations of Indian textile borders — balancing tradition and modern minimalism.</p>
+        <a href="patterns-simplified.html" style="color: #000000;">View Project →</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
