--- a/sf-icons.html
+++ b/sf-icons.html
@@ -21,14 +21,15 @@
             <a href="patterns-simplified.html"> patterns simplified </a>
         </div>
     </div>
-  <a href="UXdesign.html">Product Design</a>
+  <a href="UXdesign.html">Web Design</a>
 </div>
 
 
 <h2 style="text-align: center; color: #14124b;"> san francisco icons</h2>
 
 <div class="blurb">
-The goal of this project was to create three icons, representing three distinct neighborhoods of San Francisco. From left to right, the Peace Tower at Japantown, the lanterns in Chinatown, and the Holy Virgin Cathedral in the Richmond. I wanted to depict San Francisco at night, unifying the three icons.  I addi
+The goal of this project was to create three icons representing three distinct neighborhoods of San Francisco. From left to right, the Peace Pagoda in Japantown, the lanterns in Chinatown, and the Holy Virgin Cathedral in the Richmond District each symbolize the unique cultural identity of their communities.
+I wanted to depict San Francisco at night, capturing the quiet, reflective atmosphere that settles over the city after dark. To unify these diverse neighborhoods visually, I used a consistent color palette and gradient throughout the piece. Warm colors were intentionally chosen to evoke a sense of calm and connection, emphasizing the beauty of cultural diversity coexisting within a shared urban landscape.
 </div>
 
 <div class="center-image">
