--- a/architecture-abstracted.html
+++ b/architecture-abstracted.html
@@ -16,12 +16,12 @@
     <div class="dropdown">
         <a href="graphic-design.html" class="dropbtn">Graphic Design</a>
         <div class="dropdown-content">
-            <a href="architecture-abstracted.html"> architecture abstracted </a>
-            <a href="sf-icons.html"> san francisco icons</a>
-            <a href="patterns-simplified.html"> patterns simplified </a>
+            <a href="architecture-abstracted.html" style="color:#592727;"> architecture abstracted </a>
+            <a href="sf-icons.html" style="color:#592727;"> san francisco icons</a>
+            <a href="patterns-simplified.html" style="color:#592727;"> patterns simplified </a>
         </div>
     </div>
-  <a href="UXdesign.html">Product Design</a>
+  <a href="UXdesign.html"> Web Design</a>
 </div>
 
 <h2 style="text-align: center; color: #592727;"> architecture abstracted</h2>
