--- a/index.html
+++ b/index.html
@@ -1,29 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sonia Goveas | Home</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <style>
+    body, h1, h2, h3, p, a {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #021515, #1e061a);
+      color: #fff;
+      scroll-behavior: smooth;
+    }
+    a {
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+    h1 {
+      font-size: 3em;
+      font-weight: 700;
+      text-align: left;
+      margin: 60px 0 20px 0;
+      color: #ffffff;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    }
+    .nav-bar {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      backdrop-filter: blur(12px);
+      padding: 12px 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      z-index: 100;
+      font-weight: 600;
+      gap: 15px;
+    }
+    .nav-bar a {
+      color: #fff;
+      font-size: 1.1rem;
+      padding: 8px 15px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+      position: relative;
+    }
+    .nav-bar a:hover {
+      background: rgba(0, 188, 212, 0.2);
+      color: #ffffff;
+      transform: translateY(-2px);
+    }
+    .dropdown {
+      position: relative;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      border-radius: 8px;
+      min-width: 200px;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.6);
+      z-index: 10;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    .dropdown-content a {
+      display: block;
+      padding: 12px 16px;
+      color: #fff;
+      font-weight: 500;
+      transition: background 0.3s ease;
+    }
+    .dropdown-content a:hover {
+      background: rgba(0, 188, 212, 0.2);
+    }
+    .hero {
+      margin-top: 140px;
+      height: 80vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      text-align: flex-start;
+      padding: 0 20px;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+    .hero h2 {
+      font-size: 2.2em;
+      margin: 15px 0;
+      color: #fff;
+      transition: transform 0.3s ease;
+    }
+    .hero h2:hover {
+      transform: scale(1.05);
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px);}
+      to { opacity: 1; transform: translateY(0);}
+    }
+    footer {
+      background: #111;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    .social-links {
+      margin-bottom: 15px;
+    }
+    .social-links a {
+      color: #ffffff;
+      margin: 0 15px;
+      font-size: 2rem;
+      transition: transform 0.3s ease, color 0.3s ease;
+      display: inline-block;
+    }
+    .social-links a:hover {
+      transform: scale(1.3);
+    }
+    footer p {
+      margin: 0;
+      font-size: 0.9em;
+      color: #aaa;
+    }
+    @media (max-width: 768px) {
+      .nav-bar {
+        flex-direction: column;
+        top: 10px;
+        left: 10px;
+        padding: 10px;
+        gap: 10px;
+      }
+      .nav-bar a {
+        margin: 5px 0;
+        font-size: 1rem;
+      }
+      .hero h2 {
+        font-size: 1.8em;
+      }
+    }
+  </style>
 </head>
 <body>
-<div class="nav-bar">
-  <a href="index.html">Home</a>
-  <a href="resume.html">Resume</a>
-
-  <div class="dropdown">
-    <a href="graphic-design.html" class="dropbtn">Graphic Design</a>
-    <div class="dropdown-content">
-      <a href="architecture-abstracted.html"> architecture abstracted </a>
-      <a href="sf-icons.html"> san francisco icons</a>
-      <a href="patterns-simplified.html"> patterns simplified </a>
+  <div class="nav-bar">
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <div class="dropdown">
+      <a href="graphic-design.html" class="dropbtn">Graphic Design</a>
+      <div class="dropdown-content">
+        <a href="architecture-abstracted.html">Architecture Abstracted</a>
+        <a href="sf-icons.html">San Francisco Icons</a>
+        <a href="patterns-simplified.html">Patterns Simplified</a>
+      </div>
     </div>
-    </div>
-  <a href="UXdesign.html">Product Design</a>
-</div>
-
+    <a href="UXdesign.html">Web Design</a>
+  </div>
+  <div class="hero">
+    <h1>Sonia Goveas</h1>
     <h2>Data-driven.</h2>
     <h2>Design-focused.</h2>
-    
+  </div>
+  <footer>
+    <div class="social-links">
+      <a href="https://www.linkedin.com/in/sonia-goveas/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/sogoveas" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+    <p>© 2025 Sonia Goveas</p>
+  </footer>
 </body>
 </html>
