--- a/patterns-simplified.html
+++ b/patterns-simplified.html
@@ -16,9 +16,9 @@
     <div class="dropdown">
         <a href="graphic-design.html" class="dropbtn">Graphic Design</a>
         <div class="dropdown-content">
-            <a href="architecture-abstracted.html"> architecture abstracted </a>
-            <a href="sf-icons.html"> san francisco icons</a>
-            <a href="patterns-simplified.html"> patterns simplified </a>
+            <a href="architecture-abstracted.html" style="color: #000000;"> architecture abstracted </a>
+            <a href="sf-icons.html" style="color: #000000;"> san francisco icons</a>
+            <a href="patterns-simplified.html" style="color: #000000;"> patterns simplified </a>
         </div>
     </div>
   <a href="UXdesign.html">Product Design</a>
